noinst_LIBRARIES = libdate.a libhour.a libconvention.a libespecialidade.a libperson.a libutente.a libmedico.a libconsulta.a  libfile.a libhorario.a libmem.a
libperson_a_SOURCES = person.cpp
libutente_a_SOURCES = utente.cpp person.cpp convention.cpp
libmedico_a_SOURCES = medico.cpp hour.cpp especialidade.cpp person.cpp 
libdate_a_SOURCES = date.cpp
libhour_a_SOURCES = hour.cpp
libhorario_a_SOURCES = horario.cpp consulta.cpp medico.cpp hour.cpp especialidade.cpp person.cpp utente.cp convention.cpp date.cpp
libmem_a_SOURCES = MemoryHandling.cpp FileHandling.cpp consulta.cpp medico.cpp hour.cpp especialidade.cpp  person.cpp utente.cpp  convention.cpp date.cpp horario.cpp 
libfile_a_SOURCES = FileHandling.cpp consulta.cpp medico.cpp hour.cpp especialidade.cpp person.cpp utente.cpp convention.cpp date.cpp
libconvention_a_SOURCES = convention.cpp
libespecialidade_a_SOURCES =  especialidade.cpp date.cpp
libconsulta_a_SOURCES = consulta.cpp medico.cpp hour.cpp especialidade.cpp person.cpp utente.cp convention.cpp date.cpp
INCLUDE = -I@top_srcdir@/
